# total-commander-mermaidjs-lister

./: .gitattributes  CMakeLists.txt  README.md  mermaidjswebview.ini
.github/workflows/: cmake-single-platform.yml
resources/: pluginst.inf
src/: mermaidjs_wlx_ev2.cpp
